<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="true"
    android:animateLayoutChanges="true"
    android:animationCache="true"
    android:background="#36CC5656"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_above="@+id/btnTakePicture"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginEnd="78dp"
        android:layout_marginRight="78dp"
        android:layout_marginBottom="-355dp"
        android:text="@string/product_initiative"
        android:textColor="@color/colorAccent"
        app:autoSizeTextType="uniform" />

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="205dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="serif"
        android:text="@string/take_barcode_picture"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

    <Button
        android:id="@+id/btnScanBarcode"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTakePicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="173dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="serif"
        android:text="@string/scan_barcode"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="286dp"
        android:layout_height="64dp"
        android:layout_above="@+id/btnTakePicture"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="213dp"
        android:fontFamily="cursive"
        android:text="@string/main_page_title"
        android:textColor="@color/colorPrimaryDark"
        app:autoSizeTextType="uniform" />

</RelativeLayout>
